Minor code cleanups

--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -243,6 +243,8 @@
  <tabstops>
   <tabstop>kcfg_onLaunchAction</tabstop>
   <tabstop>kcfg_autoSaveImage</tabstop>
+  <tabstop>kcfg_clipboardGroup</tabstop>
+  <tabstop>kcfg_printKeyActionRunning</tabstop>
   <tabstop>kcfg_useLightMaskColour</tabstop>
   <tabstop>kcfg_showMagnifier</tabstop>
   <tabstop>kcfg_useReleaseToCapture</tabstop>
