--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -190,6 +190,13 @@
     </widget>
    </item>
    <item row="12" column="1">
+    <widget class="QCheckBox" name="kcfg_showCaptureInstructions">
+     <property name="text">
+      <string>Show capture instructions</string>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="1">
     <spacer name="verticalSpacer_3">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -205,14 +212,14 @@
      </property>
     </spacer>
    </item>
-   <item row="13" column="0">
+   <item row="14" column="0">
     <widget class="QLabel" name="rememberLabel">
      <property name="text">
       <string>Remember selected area:</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="1">
+   <item row="14" column="1">
     <widget class="QComboBox" name="kcfg_rememberLastRectangularRegion">
      <item>
       <property name="text">
@@ -248,6 +255,7 @@
   <tabstop>kcfg_useLightMaskColour</tabstop>
   <tabstop>kcfg_showMagnifier</tabstop>
   <tabstop>kcfg_useReleaseToCapture</tabstop>
+  <tabstop>kcfg_showCaptureInstructions</tabstop>
   <tabstop>kcfg_rememberLastRectangularRegion</tabstop>
  </tabstops>
  <resources/>
