--- a/src/Gui/SettingsDialog/SaveOptions.ui
+++ b/src/Gui/SettingsDialog/SaveOptions.ui
@@ -142,7 +142,7 @@
     </widget>
    </item>
    <item row="10" column="1">
-    <widget class="QLabel" name="helpTextLabel">
+    <widget class="QLabel" name="captureInstructionLabel">
      <property name="text">
       <string/>
      </property>
