Append " Selection" to "Rectangular Region" in settings
This patch updates the region title "Rectangular Region" to
"Rectangular Region Selection" in the settings dialog.

--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -157,7 +157,7 @@
    <item row="8" column="0" colspan="2">
     <widget class="KTitleWidget" name="regionTitle">
      <property name="text">
-      <string>Rectangular Region</string>
+      <string>Rectangular Region Selection</string>
      </property>
     </widget>
    </item>
