Introduce interfaces for video recordings
Includes the wayland implementation

--- a/resources.qrc
+++ b/resources.qrc
@@ -30,5 +30,8 @@
         <file>src/Gui/ShortcutsTextBox.qml</file>
         <file>src/Gui/SizeLabel.qml</file>
         <file>src/Gui/UndoRedoGroup.qml</file>
+
+        <file>src/Gui/CaptureOptions.qml</file>
+        <file>src/Gui/RecordOptions.qml</file>
     </qresource>
 </RCC>
