Provide a separate view for videos
What we need after recording a video is different from an image, so let
the UI adapt to it.

Adds a dependency to VLC-Qt's qml component to embed de video.

--- a/resources.qrc
+++ b/resources.qrc
@@ -30,6 +30,8 @@
         <file>src/Gui/ShortcutsTextBox.qml</file>
         <file>src/Gui/SizeLabel.qml</file>
         <file>src/Gui/UndoRedoGroup.qml</file>
+        <file>src/Gui/ScreenshotView.qml</file>
+        <file>src/Gui/RecordingView.qml</file>
 
         <file>src/Gui/CaptureOptions.qml</file>
         <file>src/Gui/RecordOptions.qml</file>
