--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -169,7 +169,7 @@
     </widget>
    </item>
    <item row="9" column="1">
-    <widget class="QCheckBox" name="kcfg_useLightMaskColour">
+    <widget class="QCheckBox" name="kcfg_useLightMaskColor">
      <property name="text">
       <string>Use light background</string>
      </property>
@@ -252,7 +252,7 @@
   <tabstop>kcfg_autoSaveImage</tabstop>
   <tabstop>kcfg_clipboardGroup</tabstop>
   <tabstop>kcfg_printKeyActionRunning</tabstop>
-  <tabstop>kcfg_useLightMaskColour</tabstop>
+  <tabstop>kcfg_useLightMaskColor</tabstop>
   <tabstop>kcfg_showMagnifier</tabstop>
   <tabstop>kcfg_useReleaseToCapture</tabstop>
   <tabstop>kcfg_showCaptureInstructions</tabstop>
