Add hover outline for selectable annotation objects
There is now a text color/background color dashed outline around the
visualGeometry of hovered visible EditActions. I implemented it using a
QML item instead of in the paint event because it repaints faster at
high zoom levels that way. It might be a bit troublesome to change if we
ever want to switch to more tightly fitting outlines instead of simple
rectangle outlines.

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,6 +3,7 @@
         <file>src/Gui/AnimatedLoader.qml</file>
         <file>src/Gui/AnnotationOptionsToolBarContents.qml</file>
         <file>src/Gui/Annotations/AnnotationEditor.qml</file>
+        <file>src/Gui/Annotations/HoverOutline.qml</file>
         <file>src/Gui/Annotations/ResizeHandles.qml</file>
         <file>src/Gui/Annotations/SelectionBackground.qml</file>
         <file>src/Gui/Annotations/TextTool.qml</file>
