Add QmlUtils singleton
A general utilities singleton for use in QML.

--- a/resources.qrc
+++ b/resources.qrc
@@ -23,6 +23,7 @@
         <file>src/Gui/InlineMessage.qml</file>
         <file>src/Gui/Magnifier.qml</file>
         <file>src/Gui/MainToolBarContents.qml</file>
+        <file>src/Gui/QmlUtils.qml</file>
         <file>src/Gui/RecordOptions.qml</file>
         <file>src/Gui/RecordingView.qml</file>
         <file>src/Gui/SavedAndCopiedMessage.qml</file>
@@ -35,5 +36,6 @@
         <file>src/Gui/ShortcutsTextBox.qml</file>
         <file>src/Gui/SizeLabel.qml</file>
         <file>src/Gui/UndoRedoGroup.qml</file>
+        <file>src/Gui/qmldir</file>
     </qresource>
 </RCC>
