Add video save options page to settings dialog
Removes the format combobox from the main UI and puts all the video
saving related settings on a page in the settings dialog. The video
format does not typically need to be changed frequently, so we can free
up some space in the main UI.

Video saving related settings were moved to their own settings group
(VideoSave). Image saving related settings had their group renamed (Save
-> ImageSave). Settings were renamed to more clearly reflect whether
they were for images or videos. Most image related settings now have
video related counterparts.

Format settings are now enum based rather than string based. There is
documentation about the formats in `src/Platforms/VideoPlatform.h`.
There is also a VideoFormatModel that has all the available formats,
their extensions and labels that can be used in UIs as names for the
formats.

Because of the Format enum in VideoPlatform,
SpectacleCore::supportedVideoFormats() and
VideoPlatform::suggestedExtensions() were removed and replaced by
VideoPlatform::supportedFormats().

Rather than calling VideoPlatform::setExtension() at any time before
calling VideoPlatform::startRecording(), we now get
Settings::preferredVideoFormat() and set the format inside
startRecording(). Because of this, extension() and setExtension() were
removed.

BUG: 473298

--- a/src/Gui/SettingsDialog/ImageSaveOptions.ui
+++ b/src/Gui/SettingsDialog/ImageSaveOptions.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SaveOptions</class>
- <widget class="QWidget" name="SaveOptions">
+ <class>ImageSaveOptions</class>
+ <widget class="QWidget" name="ImageSaveOptions">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -17,12 +17,12 @@
       <string>Save Location:</string>
      </property>
      <property name="buddy">
-      <cstring>kcfg_defaultSaveLocation</cstring>
+      <cstring>kcfg_imageSaveLocation</cstring>
      </property>
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="KUrlRequester" name="kcfg_defaultSaveLocation">
+    <widget class="KUrlRequester" name="kcfg_imageSaveLocation">
      <property name="mode">
       <set>KFile::Directory|KFile::LocalOnly</set>
      </property>
@@ -59,7 +59,7 @@
      <item>
       <layout class="QHBoxLayout" name="qualityHLayout">
        <item>
-        <widget class="QSlider" name="kcfg_compressionQuality">
+        <widget class="QSlider" name="kcfg_imageCompressionQuality">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
@@ -88,21 +88,21 @@
       <string>Filename:</string>
      </property>
      <property name="buddy">
-      <cstring>kcfg_saveFilenameFormat</cstring>
+      <cstring>kcfg_imageFilenameFormat</cstring>
      </property>
     </widget>
    </item>
    <item row="6" column="1">
     <layout class="QHBoxLayout" name="saveLayout">
      <item>
-      <widget class="QLineEdit" name="kcfg_saveFilenameFormat">
+      <widget class="QLineEdit" name="kcfg_imageFilenameFormat">
        <property name="placeholderText">
         <string notr="true">%d</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="kcfg_defaultSaveImageFormat">
+      <widget class="QComboBox" name="kcfg_preferredImageFormat">
        <property name="kcfg_property" stdset="0">
         <!-- This is not a user-visible string but a property name. Don't translate it. -->
         <string notr="true">currentText</string>
@@ -168,7 +168,7 @@
     </spacer>
    </item>
    <item row="4" column="1">
-    <widget class="QLabel" name="compressionQualityHelpLable">
+    <widget class="QLabel" name="imageCompressionQualityHelpLable">
      <property name="text">
       <string>For lossy image formats like JPEG</string>
      </property>
@@ -186,7 +186,7 @@
  <resources/>
  <connections>
   <connection>
-   <sender>kcfg_compressionQuality</sender>
+   <sender>kcfg_imageCompressionQuality</sender>
    <signal>valueChanged(int)</signal>
    <receiver>qualitySpinner</receiver>
    <slot>setValue(int)</slot>
@@ -204,7 +204,7 @@
   <connection>
    <sender>qualitySpinner</sender>
    <signal>valueChanged(int)</signal>
-   <receiver>kcfg_compressionQuality</receiver>
+   <receiver>kcfg_imageCompressionQuality</receiver>
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
