--- a/src/Gui/SettingsDialog/VideoSaveOptions.ui
+++ b/src/Gui/SettingsDialog/VideoSaveOptions.ui
@@ -103,6 +103,9 @@
      <property name="text">
       <string/>
      </property>
+     <property name="textFormat">
+      <enum>Qt::RichText</enum>
+     </property>
      <property name="wordWrap">
       <bool>true</bool>
      </property>
