Change default launch action to rectangular screenshot

--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -22,6 +22,11 @@
     <widget class="QComboBox" name="kcfg_launchAction">
      <item>
       <property name="text">
+       <string>Take rectangular screenshot</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
        <string>Take full screen screenshot</string>
       </property>
      </item>
