--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -300,7 +300,78 @@
      </widget>
     </widget>
    </item>
-   <item row="17" column="0" colspan="2">
+   <item row="17" column="0">
+    <widget class="QLabel" name="ocrDisableSaveLabel">
+     <property name="text">
+      <string>Text extraction:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="17" column="1">
+    <layout class="QHBoxLayout" name="disableSaveOnOcrLayout">
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
+     <property name="topMargin">
+      <number>0</number>
+     </property>
+     <property name="rightMargin">
+      <number>0</number>
+     </property>
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QCheckBox" name="kcfg_disableSaveOnOcr">
+       <property name="text">
+        <string>Do not auto-save</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="disableSaveOnOcrInfo">
+       <property name="toolTip">
+        <string>When enabled, automatic saving is skipped for OCR extractions even if automatic saving is turned on.</string>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_ocr_save">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item row="18" column="0" colspan="2">
     <widget class="QWidget" name="ocrUnavailableWidget">
      <property name="visible">
       <bool>false</bool>
