--- a/src/Gui/SettingsDialog/GeneralOptions.ui
+++ b/src/Gui/SettingsDialog/GeneralOptions.ui
@@ -143,7 +143,21 @@
      </item>
     </widget>
    </item>
-   <item row="7" column="0" colspan="2">
+   <item row="7" column="0">
+    <widget class="QLabel" name="accessibilityToolsLabel">
+     <property name="text">
+      <string>When using accessibility tools:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="1">
+    <widget class="QCheckBox" name="kcfg_includeZoom">
+     <property name="text">
+      <string>Include Zoom and Magnifier</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="0" colspan="2">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -159,42 +173,42 @@
      </property>
     </spacer>
    </item>
-   <item row="8" column="0" colspan="2">
+   <item row="9" column="0" colspan="2">
     <widget class="KTitleWidget" name="regionTitle">
      <property name="text">
       <string>Rectangular Region Selection</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="0">
+   <item row="10" column="0">
     <widget class="QLabel" name="generalLabel">
      <property name="text">
       <string>General:</string>
      </property>
     </widget>
    </item>
-   <item row="9" column="1">
+   <item row="10" column="1">
     <widget class="QCheckBox" name="kcfg_useLightMaskColor">
      <property name="text">
       <string>Use light background</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="1">
+   <item row="11" column="1">
     <widget class="QCheckBox" name="kcfg_useReleaseToCapture">
      <property name="text">
       <string>Accept on click-and-release</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="0">
+   <item row="12" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Show magnifier:</string>
      </property>
     </widget>
    </item>
-   <item row="11" column="1">
+   <item row="12" column="1">
     <widget class="QComboBox" name="kcfg_showMagnifier">
      <item>
       <property name="text">
@@ -213,14 +227,14 @@
      </item>
     </widget>
    </item>
-   <item row="12" column="0">
+   <item row="13" column="0">
     <widget class="QLabel" name="rememberLabel">
      <property name="text">
       <string>Remember selected area:</string>
      </property>
     </widget>
    </item>
-   <item row="12" column="1">
+   <item row="13" column="1">
     <widget class="QComboBox" name="kcfg_rememberSelectionRect">
      <item>
       <property name="text">
